<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:layout_collapseMode="pin">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_below="@id/app_bar">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButtonDelivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_deliveded"
            android:checked="true"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButtonCustomerNotAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_customer_not_available" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButtonInvalidAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_invalid_address" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_btn_other" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/radioGroup">

        <EditText
            android:id="@+id/edtReasonOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/text_padding"
            android:hint="Other Reason"
            android:inputType="textAutoComplete"
            android:visibility="invisible"
            android:maxLines="5"
            android:textSize="@dimen/text_size_medium" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        android:text="Done"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/txtInputLayout"/>

</RelativeLayout>