<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relParent">

        <!-- This extra Hierarchy is added to preserve padding in xml and not needing to change padding programtically when
        changing background programatically-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
    <TextView
        android:id="@+id/txtAdd"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:ems="4"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_small"
        android:background="@drawable/shape_border_green"/>

    <RelativeLayout
        android:id="@+id/relRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignRight="@id/txtAdd"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtAvailedQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/availed"
            android:textColor="@color/colorAccent"

            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/txtValueAvailedQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtAvailedQty"
            android:layout_alignRight="@id/txtAvailedQty"
            android:gravity="right"
            android:text="100"
            android:textColor="@color/colorAccent"
            android:textSize="24dp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Product"
        android:lines="2"
        android:layout_toLeftOf="@id/relRight"
        android:textSize="@dimen/text_size_small"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"

        />

    <TextView
        android:id="@+id/txtAvailableQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/available"
        android:gravity="right"
        android:textSize="@dimen/text_size_small"
        android:layout_below="@id/txtProductName"
        />

    <TextView
        android:id="@+id/txtValueAvailableQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorShadeBlack"
        android:text="10"
        android:layout_toRightOf="@id/txtAvailableQuantity"
        android:textSize="@dimen/text_size_small"
        android:layout_alignBaseline="@id/txtAvailableQuantity"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/txtPackageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/package_size"
        android:gravity="right"
        android:textSize="@dimen/text_size_small"
        android:layout_marginTop="@dimen/extra_item_margin_top"
        android:layout_below="@id/txtAvailableQuantity"
        />

    <TextView
        android:id="@+id/txtValuePackageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorShadeBlack"
        android:text="10"
        android:layout_toRightOf="@id/txtPackageSize"
        android:textSize="@dimen/text_size_small"
        android:layout_alignLeft="@id/txtValueAvailableQuantity"
        android:layout_alignBaseline="@id/txtPackageSize"
        />


    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/price"
        android:gravity="right"
        android:textSize="@dimen/text_size_small"
        android:layout_marginTop="@dimen/extra_item_margin_top"
        android:layout_below="@id/txtPackageSize"
        />

    <TextView
        android:id="@+id/txtValuePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorShadeBlack"
        android:text="10"
        android:layout_toRightOf="@id/txtPackageSize"
        android:textSize="@dimen/text_size_small"
        android:layout_alignLeft="@id/txtValueAvailableQuantity"
        android:layout_alignBaseline="@id/txtPrice"
        />
</RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
